k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: spring-service
spec:
    type: NodePort
    selector:
        app: spring-k8s
    ports:
        -   port: 80
            targetPort: 8080
            nodePort: 30080
