k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-app-ingress
spec:
    rules:
        -   host: myapp.local
            http:
                paths:
                    -   path: /api/k8s/namespace
                        pathType: Prefix
                        backend:
                            service:
                                name: spring-service
                                port:
                                    number: 80
